--- a/index.html
+++ b/index.html
@@ -84,32 +84,37 @@
 
         <a href="#" class="button">    Get Started For Free </a>
     </div>
+    <div class=color-buttom>
+        <div class=buttom>
+            <div class=buttom-left>
+                <div>
+                    <a href="#"> <img src="images/logo.svg" alt="" /> </a>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.</p>
+                    <p> <img class=icon src="images/icon-phone.svg" alt="icon-phone" /> Phone: <a href="tel:+1-543-123-4567">  +1-543-123-4567 </a> </p>
+                    <p> <img class=icon src="images/icon-email.svg" alt="icon-email" /> <a href="mailto:example@huddle.com">example@huddle.com</a> </p>
+                </div>
+                <div class=icones>
+                    <a href="#" class="fa fa-facebook"></a>
+                    <a href="#" class="fa fa-twitter"></a>
+                    <a href="#" class="fa fa-instagram"></a>
 
-    <div class=buttom>
-        <div class=buttom-left>
-            <div>
-                <a href="#"> <img src="images/logo.svg" alt="" /> </a>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.</p>
-                <p> <img class=icon src="images/icon-phone.svg" alt="icon-phone" /> Phone: <a href="tel:+1-543-123-4567">  +1-543-123-4567 </a> </p>
-                <p> <img class=icon src="images/icon-email.svg" alt="icon-email" /> <a href="mailto:example@huddle.com">example@huddle.com</a> </p>
+                </div>
             </div>
-            <div class=icones>
-                <a href="#" class="fa fa-facebook"></a>
-                <a href="#" class="fa fa-twitter"></a>
-                <a href="#" class="fa fa-instagram"></a>
+            <div class=buttom-right>
 
+                <h2>Newsletter </h2>
+                <p> To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
+                <form><input type="text" id="fname" name="fname"> <input class=button type="submit" value="Subscribe" /></form>
             </div>
         </div>
-        <div class=buttom-right>
+        <footer>
+            <p class="attribution">
+                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Oussama Jannane</a>.
+            </p>
+        </footer>
 
-            <h2>Newsletter </h2>
-            <p> To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address</p>
-            <form><input type="text" id="fname" name="fname"> <input class=button type="submit" value="Subscribe" /></form>
-        </div>
 
     </div>
-
-
 </body>
 
 </html>
